alertify integrated, fixes in css

--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html>
 
 <head>
-    <link href="styles.css" rel="stylesheet">
+    <link href="/styles/styles.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400;500;700;800;900&display=swap" rel="stylesheet">    
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="/styles/alertify.min.css">
+<link rel="stylesheet" href="/themes/default.min.css">
 <title>Ideapad</title>
 </head>
 
@@ -38,7 +40,7 @@
     </div>
     <br><br><br>
 
-
+    <script src="alertify.min.js"></script>
     <script src="uuidv4.js"></script>
     <script src="ideapad.js"></script>
     <script src="idea-edit.js"></script>
