--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <link href="/styles/styles.css" rel="stylesheet">
+    <link href="/styles/mobilestyles.css" media="screen and (max-width: 600px)" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -11,6 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="/styles/alertify.min.css">
 <link rel="stylesheet" href="/themes/default.min.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Ideapad</title>
 </head>
 
@@ -38,7 +40,7 @@
         <div id="idea-list">
         </div>
     </div>
-    <br><br><br>
+    <br>
 
     <script src="alertify.min.js"></script>
     <script src="uuidv4.js"></script>
@@ -46,5 +48,8 @@
     <script src="idea-edit.js"></script>
 
 </body>
+<footer>
+    Kevin
+</footer>
 
 </html>
