Mark idea completion implemented

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <textarea id="idea-description" class="input" placeholder="What is it about?"></textarea><br>
             <input id="idea-reason" class="input" placeholder="Why does it matter?">
             <br><br>
-            <button id="addNewIdeaButton" class="button"></button>
-            <button id="forgetNewIdeaButton" class="button"></button>
+            <button id="addNewIdeaButton" class="button" title="Add new idea"></button>
+            <button id="forgetNewIdeaButton" class="button" title="Forget it"></button>
         </form>
     </div>
 
