Multiple interactive fields in steptowards implemented

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h2>Keep and pursue your fabulous ideas</h2>
 
     <div class="add-new-idea">
-        <input type="text" id="idea-title" class="input" placeholder="Your Idea">
+        <input type="text" id="idea-title" class="input" placeholder="Your Idea" autocomplete="off">
     </div>
 
     <div class="form-container">
