last updated timestamp added, reset editform stepstoward fixed

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="idea-form">
         <form>
             <textarea id="idea-description" class="input" placeholder="What is it about?"></textarea><br>
-            <input id="idea-reason" class="input" placeholder="Why does it matter?">
+            <input id="idea-reason" class="input" placeholder="Why does it matter to you?" autocomplete="off">
             <br><br>
             <button id="addNewIdeaButton" class="button" title="Add new idea"></button>
             <button id="forgetNewIdeaButton" class="button" title="Forget it"></button>
@@ -40,11 +40,10 @@
         </div>
     </div>
     <br>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment-with-locales.min.js"></script>
     <script src="alertify.min.js"></script>
     <script src="uuidv4.js"></script>
     <script src="ideapad.js"></script>
-    <script src="idea-edit.js"></script>
 
 </body>
 <footer>
