--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <h2>Keep and pursue your fabulous ideas</h2>
 
     <div class="add-new-idea">
-        <input type="text" id="idea-title" class="input" placeholder="Your Idea" autocomplete="off">
+        <input type="text" id="idea-title" class="input" placeholder="Start with a title..." autocomplete="off" maxlength="50">
     </div>
 
     <div class="form-container">
         <div class="idea-form">
         <form>
-            <textarea id="idea-description" class="input" placeholder="What is it about?"></textarea><br>
+            <textarea id="idea-description" class="input" placeholder="What is your idea about?"></textarea><br>
             <input id="idea-reason" class="input" placeholder="Why does it matter to you?" autocomplete="off">
             <br><br>
             <button id="addNewIdeaButton" class="button" title="Add new idea"></button>
