--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <link rel="stylesheet" href="/styles/alertify.min.css">
 <link rel="stylesheet" href="/themes/default.min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 <title>Ideapad</title>
 </head>
 
@@ -20,7 +23,7 @@
     <h2>Keep and pursue your fabulous ideas</h2>
 
     <div class="add-new-idea">
-        <input type="text" id="idea-title" class="input" placeholder="Start with a title..." autocomplete="off" maxlength="50">
+        <input type="text" id="idea-title" class="input" placeholder="Start with a title..." autocomplete="off" maxlength="40">
     </div>
 
     <div class="form-container">
@@ -36,6 +39,7 @@
 
     </div>
     <div class="idea-list-container">
+        <div id="idea-list-settings"></div>
         <div id="idea-list">
         </div>
     </div>
@@ -47,7 +51,8 @@
 
 </body>
 <footer>
-    Kevin
+    Kevin<br>
+    v1.3
 </footer>
 
 </html>
